More mobile layout spacing fixes

--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -220,8 +220,8 @@ body {
 	.wide {display:none !important;}
 
 	#page {padding:20px 20px 60px;}
-	#stamp {position:relative;top:0;left:0;width:100%;height:280px;padding:20px 0;text-align:center;}
-	#profile {margin-bottom:26px;font-size:16px;width:100%;}
+	#stamp {position:relative;top:0;left:0;width:100%;height:auto;padding:20px 0;text-align:center;}
+	#profile {margin-bottom:0;height:auto;font-size:16px;width:100%;float:none}
 	.avatar {max-width:150px;height:150px;float:none;margin:0;}
 	#stamp h1 {font-size:30px}
 	.counts .btn {padding:8px 10px;}
@@ -237,8 +237,7 @@ body {
 	.filters {width:200px}
 
 	/* Temporary styles */
-	.alpha-msg {width:500px;max-width:90%;text-align:left;margin:0 auto;}
-	#profile {height:250px}
+	.alpha-msg {width:500px;max-width:90%;text-align:left;margin:25px auto 0;}
 }
 
 /* Exclusively on larger screens */
